@startuml
class CreateCollaboratorAssignJobGUI {
        - controller: CreateCollaboratorAssignJobController
        + CreateCollaboratorAssignJobGUI()
        + getController(): CreateCollaboratorAssignJobController
        + displayJobsList(jobs: ArrayList<Job>): void
        + displayCollaboratorsList(collaborators: ArrayList<Collaborator>): void
        + selectAndAddJob(): Job
        + displayAndSelectDocumentType(): DocumentType
        + displayDocumentTypeList(documentTypeList: List<DocumentType>): void
        + backToHRMUI(): void
        + createCollaborator(): boolean
        + run(): void
}

class CreateCollaboratorAssignJobController {
- jobsRepository: JobsRepository
- collaboratorsRepository: CollaboratorsRepository
- authenticationRepository: AuthenticationRepository
+ CreateCollaboratorAssignJobController()
+ getJobsList(): ArrayList<Job>
+ getCollaboratorsList(): ArrayList<Collaborator>
+ getDocTypesList(): ArrayList<DocumentType>
+ addCollaborator(name: String, documentIdentificationNum: String, taxPayerNumber: String, email: String, mobileNumber: int, address: String, admissionDate: String, birthDate: String, identificationDocumentType: DocumentType, chosenJob: Job): boolean
}

class CollaboratorRepository {
- collaboratorsArrayList: ArrayList<Collaborator>
+ getCollaboratorsArrayList(): ArrayList<Collaborator>
+ addCollaborator(name: String, documentIdentificationNumber: String, taxPayerNumber: String, email: String, mobileNumber: int, address: String, admissionDate: String, birthDate: String, identificationDocumentType: DocumentType, job: Job): boolean
+ getDeactivatedCollaboratorsBySkill(skills: ArrayList<Skill>): ArrayList<Collaborator>
+ addSkill(collab: Collaborator, skills: ArrayList<Skill>): boolean
}

class Repositories {
- instance: Repositories
- collaboratorsRepository: CollaboratorsRepository
- skillsRepository: SkillsRepository
- jobsRepository: JobsRepository
- authenticationRepository: AuthenticationRepository
- teamsRepository: TeamsRepository
- vehicleRepository: VehicleRepository
- maintenanceRepository: MaintenanceRepository
- greenSpaceRepository: GreenSpacesRepository
- agenda: Agenda
- toDoList: ToDoList
- presister: RepositoryPresister
+ getInstance(): Repositories
+ getSkillsRepository(): SkillsRepository
+ getTeamsRepository(): TeamsRepository
+ getJobsRepository(): JobsRepository
+ getCollaboratorsRepository(): CollaboratorsRepository
+ getAuthenticationRepository(): AuthenticationRepository
+ getVehicleRepository(): VehicleRepository
+ getMaintenanceRepository(): MaintenanceRepository
+ getGreenSpaceRepository(): GreenSpacesRepository
+ getAgenda(): Agenda
+ getToDoList(): ToDoList
+ save(): void
+ presister(): RepositoryPresister
}

class Collaborator {
- name: String
- birthDate: String
- admissionDate: String
- address: String
- mobileNumber: int
- email: String
- taxPayerNumber: int
- identificationDocumentType: DocumentType
- documentIdentificationNumber: int
- skills: ArrayList<Skill>
- job: Job
+ Collaborator(name: String, documentIdentificationNumber: String, taxPayerNumber: String, email: String, mobileNumber: int, address: String, admissionDate: String, birthDate: String, identificationDocumentType: DocumentType, job: Job, status: CollaboratorStatus)
+ addSkillToCollaboratorSkills(skill: Skill): void
+ skillAlreadyAssigned(skill: Skill): boolean
+ getName(): String
+ setName(name: String): void
+ getBirthDate(): String
+ setBirthDate(birthDate: String): void
+ getAdmissionDate(): String
+ setAdmissionDate(admissionDate: String): void
+ getAddress(): String
+ setAddress(address: String): void
+ getMobileNumber(): int
+ setMobileNumber(mobileNumber: int): void
+ getEmail(): String
+ setEmail(email: String): void
+ getTaxPayerNumber(): int
+ setTaxPayerNumber(taxPayerNumber: int): void
+ getStatus(): CollaboratorStatus
+ activateCollaborator(): void
+ getIdentificationDocumentType(): DocumentType
+ setIdentificationDocumentType(identificationDocumentType: DocumentType): void
+ getDocumentIdentificationNumber(): int
+ setDocumentIdentificationNumber(documentIdentificationNumber: int): void
+ getSkills(): ArrayList<Skill>
+ getJob(): Job
}

Class JobsRepository {
- jobsArrayList: ArrayList<Job>
+ getJobsArrayList(): ArrayList<Job>
- jobAlreadyExist(jobName: String): boolean
- jobNameIsValid(jobName: String): boolean
+ addJob(jobName: String): boolean
}

class Job {
- jobName: String
+ Job(jobName: String)
+ getjobName(): String
+ setjobName(jobName: String): void
+ equals(jobName: String): boolean
+ toString(): String
}

class AgendaEntryDTO {
}

class VehicleDTO {
}

class AgendaMapper {
}

CreateCollaboratorAssignJobController ..> AgendaMapper
CreateCollaboratorAssignJobController ..> AgendaEntryDTO
CreateCollaboratorAssignJobController ..> VehicleDTO
CreateCollaboratorAssignJobGUI ..> AgendaEntryDTO
CreateCollaboratorAssignJobGUI ..> VehicleDTO
AgendaMapper ..> AgendaEntryDTO
AgendaMapper ..> VehicleDTO
Repositories --> Repositories : instance
CreateCollaboratorAssignJobGUI ..> CreateCollaboratorAssignJobController
CreateCollaboratorAssignJobController ..> Collaborator
CreateCollaboratorAssignJobController ..> Job
CreateCollaboratorAssignJobController ..> Repositories
Repositories "1"--"1" CollaboratorRepository : has
Repositories "1"--"1" JobRepository : has
CollaboratorRepository "1" --"*" Collaborator : has
JobsRepository "1" --"*" Job : has

@enduml